test/files/neg/t5031.check
package.scala:2: error: Companions 'class Test' and 'object Test' must be defined in same file:
  Found in t5031/package.scala and t5031/Id.scala
  class Test
        ^
one error found
